--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ header {
   height: 150vh;
   padding: 10px;
   width: 100%;
-  background-color: aqua;
 }
 
 .row { 
@@ -80,10 +79,11 @@ h1 {
 
   img {
     position: relative;
-    height: 35vh;
-    width: 35vh;
+    height: 30vh;
+    width: 30vh;
     float: left;
     margin: 10px 0px 20px 0px;
+    z-index: 0;
     
   }
   p {
@@ -159,7 +159,7 @@ h1 {
 .clone-col-sm-4 {
   position: relative;
 }
-  .clone-col-sm-4 label {
+.clone-col-sm-4 label {
     
     position: relative;
     background-color: #4aaaa5;
@@ -171,6 +171,16 @@ h1 {
     z-index: 1;
   }
   
+input[type="text"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+textarea {
+  width: 100%;
+  height: 200px;
+}
   footer {
     position: relative;
     border-top: 8px solid #4aaaa5;
